<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="signin">Sign In</string>
    <string name="ggsignin">Google</string>
    <string name="welcometo">Welcome to</string>
    <string name="foodhub">FoodHub</string>
    <string name="prompt_email">Your email or phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to_prelookstudio_gmail_com">Please type the verification code sent to prelookstudio@gmail.com</string>
    <string name="i_don_t_receive_a_code">I don\'t receive a code!</string>
    <string name="please_resend">Please resend</string>

</resources>